trying to fix background oon mobile

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -58,20 +58,12 @@ body
 
 
 .top-background-img
-  height: 100vh
-  width: 100%
   position: relative
   background-size: cover
   background-attachment: fixed
   background-repeat: no-repeat
   background-position: center
 
-.bike-background-img
-  width: 100%
-  background-size: cover
-  background-attachment: fixed
-  // background-repeat: no-repeat
-  background-position: center
 .filler
   position: relative
   font-size: 25px
